--- a/app/tic-tac-toe/page.module.scss
+++ b/app/tic-tac-toe/page.module.scss
@@ -33,3 +33,26 @@
   background: #fff;
   color: #000;
 }
+
+.new {
+  --box-shadow-color: #fff;
+  --scale: 1;
+  border: 0;
+  border-radius: 1em;
+  background: transparent;
+  color: #fff;
+  font-size: 1.25em;
+  padding: 0.25em 1em;
+  transition: 0.1s ease;
+  box-shadow: 0 0 0 0.075em var(--box-shadow-color);
+  transform: scale(var(--scale));
+}
+
+.new:hover {
+  --box-shadow-color: #06cdff;
+  --scale: 1.1;
+}
+
+.new:active {
+  --scale: 0.9;
+}
